<resources>
    <string name="app_name">Trackmatic</string>
    <string name="_0">0</string>
    <string name="r0_00">0.00</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="clear_cart">Clear</string>
    <string name="calculate">Calculate</string>
    <string name="quantity">Quantity</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="enter_quantity">Enter Quantity:</string>
    <string name="enter_price">Enter Price:</string>
    <string name="select_item">Select Item:</string>
    <string name="coordinates">Coordinates:</string>
    <string name="x_axis">X-axis</string>
    <string name="y_axis">Y-axis</string>
    <string name="line_1">Line 1</string>
    <string name="line_two">Line two</string>
    <string name="instructions">Instructions</string>
    <string name="position">Rover Position:</string>
    <string name="output">Output</string>
    <string name="command">Command</string>
    <string name="facing_direction">Facing Direction:</string>
    <string name="cardinal_direction">Cardinal direction</string>

    <string-array name="problem_statements">
        <item>Trains &amp; Towns </item>
        <item>PROBLEM TWO: SALES TAXES </item>
        <item>PROBLEM THREE: MARS ROVERS</item>
    </string-array>

    <string-array name="problem_statements_backgrounds">
        <item>trains</item>
        <item>tax</item>
        <item>marsarover</item>
    </string-array>

    <string-array name="sale_items">
        <item>Book</item>
        <item>Music CD</item>
        <item>Chocolate Bar</item>
        <item>Bottle of perfume</item>
        <item>Packet of headache pills</item>
        <item>Imported box of chocolates</item>
        <item>Imported bottle of perfume</item>
    </string-array>

    <string-array name="sale_items_tax_free">
        <item>Book</item>
        <item>Chocolate Bar</item>
        <item>Packet of headache pills</item>
        <item>Imported box of chocolates</item>
    </string-array>

    <string-array name="imported_items">
        <item>Imported box of chocolates</item>
        <item>Imported bottle of perfume</item>
    </string-array>

    <string-array name="direction">
        <item>N</item>
        <item>W</item>
        <item>E</item>
        <item>S</item>
    </string-array>

    <string-array name="axis">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

   <string name="test_data">1. The distance of the route A-B-C.\n
2. The distance of the route A-D.\n
3. The distance of the route A-D-C.\n
4. The distance of the route A-E-B-C-D.\n
5. The distance of the route A-E-D.\n
6. The number of trips starting at C and ending at C with a maximum of 3 stops. In the sample data
below, there are two such trips: C-D-C (2 stops). and C-E-B-C (3 stops).\n
7. The number of trips starting at A and ending at C with exactly 4 stops. In the sample data below,
there are three such trips: A to C (via B,C,D); A to C (via D,C,D); and A to C (via D,E,B).\n
8. The length of the shortest route (in terms of distance to travel) from A to C.\n
9. The length of the shortest route (in terms of distance to travel) from B to B.\n
10. The number of different routes from C to C with a distance of less than 30. In the sample data,
the trips are: CDC, CEBC, CEBCDC, CDCEBC, CDEBC, CEBCEBC, CEBCEBCEBC.</string>

</resources>
